crates/agent/src/controllers/snapshots/agent__controllers__inferred_schema__test__observe-pub-d-1-completed.snap
---
source: crates/agent/src/controllers/inferred_schema.rs
expression: "&updates"
info:
  id: 000000000000000b
  completed_at: "2024-01-01T08:01:00Z"
  draft:
    collections:
      a/d:
        writeSchema:
          "$serde_json::private::RawValue": "{\"properties\":{\"id\":{\"type\":\"string\"}},\"type\":\"object\"}"
        readSchema:
          "$serde_json::private::RawValue": "{\"allOf\":[{\"$ref\":\"flow://inferred-schema\"},{\"$ref\":\"flow://write-schema\"}]}"
        key:
          - /id
        derive:
          using:
            sqlite: {}
          transforms:
            - name: a/a
              source: a/a
              shuffle: unset
              lambda:
                "$serde_json::private::RawValue": "\"shelect shtar\""
  starting_states:
    a/d:
      active: true
      next_run: ~
      updated_at: "2024-01-01T08:01:00Z"
      status:
        schema_last_updated: "2024-01-01T08:00:00Z"
        schema_md5: ~
        publications:
          pending:
            id: 000000000000000b
            created: "2024-01-01T08:01:00Z"
          history: []
          last_observed:
            id: "0000000000000001"
            completed: "2024-01-01T08:00:00Z"
            result:
              type: success
      failures: 0
  publication_status:
    type: success
  _phantom: ~
---
{
  "a/d": {
    "active": true,
    "next_run": {
      "after_seconds": 600,
      "jitter_percent": 25
    },
    "status": {
      "schema_last_updated": "2024-01-01T08:01:00Z",
      "schema_md5": "9a715d81eee48cba22c4469c1417d697",
      "publications": {
        "pending": null,
        "history": [
          {
            "id": "000000000000000b",
            "created": "2024-01-01T08:01:00Z",
            "completed": "2024-01-01T08:01:00Z",
            "result": {
              "type": "success"
            }
          }
        ],
        "last_observed": {
          "id": "000000000000000b",
          "created": "2024-01-01T08:01:00Z",
          "completed": "2024-01-01T08:01:00Z",
          "result": {
            "type": "success"
          }
        }
      }
    }
  }
}
