crates/agent/src/controllers/snapshots/agent__controllers__inferred_schema__test__update-after-d-schema-updated-1.snap
---
source: crates/agent/src/controllers/inferred_schema.rs
expression: "(update, &publications)"
info:
  catalog_name: a/d
  prev_state:
    active: true
    next_run: "2024-01-01T08:03:00Z"
    updated_at: "2024-01-01T08:02:00Z"
    status:
      schema_last_updated: "2024-01-01T08:01:00Z"
      schema_md5: ~
      consumers:
        a/m1:
          applied_schema_md5: ~
          last_publication:
            id: "0200000000000000"
            completed: "2024-01-01T08:02:00Z"
            result:
              type: success
        a/m3:
          applied_schema_md5: ~
          last_publication:
            id: "0100000000000000"
            completed: "2024-01-01T08:01:00Z"
            result:
              type: success
      publications:
        pending: ~
        history: []
        last_observed:
          id: "0200000000000000"
          completed: "2024-01-01T08:02:00Z"
          result:
            type: success
    failures: 0
---
[
  {
    "active": true,
    "next_run": null,
    "status": {
      "schema_last_updated": "2024-01-01T08:03:00Z",
      "schema_md5": "9a715d81eee48cba22c4469c1417d697",
      "consumers": {
        "a/m1": {
          "applied_schema_md5": null,
          "last_publication": {
            "id": "0200000000000000",
            "completed": "2024-01-01T08:02:00Z",
            "result": {
              "type": "success"
            }
          }
        },
        "a/m3": {
          "applied_schema_md5": null,
          "last_publication": {
            "id": "0100000000000000",
            "completed": "2024-01-01T08:01:00Z",
            "result": {
              "type": "success"
            }
          }
        }
      },
      "publications": {
        "pending": {
          "id": "0300000000000000",
          "created": "2024-01-01T08:03:00Z"
        },
        "history": [],
        "last_observed": {
          "id": "0200000000000000",
          "completed": "2024-01-01T08:02:00Z",
          "result": {
            "type": "success"
          }
        }
      }
    }
  },
  [
    {
      "draft": {
        "collections": {
          "a/d": {
            "writeSchema": {
              "$serde_json::private::RawValue": "{\"properties\":{\"id\":{\"type\":\"string\"}},\"type\":\"object\"}"
            },
            "readSchema": {
              "$serde_json::private::RawValue": "{\"allOf\":[{\"$ref\":\"flow://inferred-schema\"},{\"$ref\":\"flow://write-schema\"}]}"
            },
            "key": [
              "/id"
            ],
            "derive": {
              "using": {
                "sqlite": {}
              },
              "transforms": [
                {
                  "name": "a/a",
                  "source": "a/a",
                  "shuffle": "unset",
                  "lambda": {
                    "$serde_json::private::RawValue": "\"shelect shtar\""
                  }
                }
              ]
            }
          }
        }
      },
      "publication_meta": [
        "0300000000000000",
        "2024-01-01T08:03:00Z"
      ]
    }
  ]
]
