crates/agent/src/controllers/snapshots/agent__controllers__inferred_schema__test__update-m1-after-d-schema-updated-1.snap
---
source: crates/agent/src/controllers/inferred_schema.rs
expression: "(update, &publications)"
info:
  catalog_name: a/m1
  prev_state:
    active: true
    next_run: "2024-01-01T08:03:00Z"
    updated_at: "2024-01-01T08:02:00Z"
    status:
      collections:
        a/a:
          inferred_schema_md5: 9a715d81eee48cba22c4469c1417d697
          md5_last_updated: "2024-01-01T08:02:00Z"
        a/d:
          inferred_schema_md5: ~
          md5_last_updated: "2024-01-01T08:01:00Z"
      publications:
        pending: ~
        history: []
        last_observed:
          id: "0200000000000000"
          completed: "2024-01-01T08:02:00Z"
          result:
            type: success
    failures: 0
---
[
  {
    "active": true,
    "next_run": null,
    "status": {
      "collections": {
        "a/a": {
          "inferred_schema_md5": "9a715d81eee48cba22c4469c1417d697",
          "md5_last_updated": "2024-01-01T08:02:00Z"
        },
        "a/d": {
          "inferred_schema_md5": null,
          "md5_last_updated": "2024-01-01T08:01:00Z"
        }
      },
      "publications": {
        "pending": {
          "id": "0400000000000000",
          "created": "2024-01-01T08:03:00Z"
        },
        "history": [],
        "last_observed": {
          "id": "0200000000000000",
          "completed": "2024-01-01T08:02:00Z",
          "result": {
            "type": "success"
          }
        }
      }
    }
  },
  [
    {
      "draft": {
        "materializations": {
          "a/m1": {
            "endpoint": {
              "connector": {
                "image": "foo:test",
                "config": {
                  "$serde_json::private::RawValue": "{}"
                }
              }
            },
            "bindings": [
              {
                "resource": {
                  "$serde_json::private::RawValue": "{\"thing\":\"a/a\"}"
                },
                "source": "a/a",
                "fields": {
                  "recommended": true
                }
              },
              {
                "resource": {
                  "$serde_json::private::RawValue": "{\"thing\":\"a/d\"}"
                },
                "source": "a/d",
                "fields": {
                  "recommended": true
                }
              }
            ]
          }
        }
      },
      "publication_meta": [
        "0400000000000000",
        "2024-01-01T08:03:00Z"
      ]
    }
  ]
]
